# jarvis

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  design.md  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/docker/: Dockerfile.ci-base
.github/workflows/: beta-source-guard.yml  ci-base-image.yml  ci-nightly.yml  ci.yml
app/: pyproject.toml
app/jarvis/: api.py  hooks.py
app/jarvis/tests/: test_exceptions.py  test_get_doc.py  test_get_list.py  test_get_schema.py  test_run_report.py
app/jarvis/tools/: get_doc.py  get_list.py  run_report.py
brand/: README.md  generate.py  manifest_icons.py
docs/: architecture.md  development.md  tools-api.md
docs/mobile-app/: 2026-07-06-mobile-backend-design.md  README.md  client-tech-stack.md  research-ai-app-field-study.md  research-spa-exploration.md  research-stack-evaluation.md  ui-ux-design-prompt.md
docs/ui-preview/: index.html
frontend/: index.html  inline-charts.plan.md  node_modules  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/scripts/: frappe-ui-content.mjs
frontend/src/: App.vue  api.js  branding.js  index.css  main.css  main.js  markdown.js  noticeGate.js  socket.js  theme.js  theme.test.js
jarvis/: _http.py  _model_catalog.py  _password_utils.py  _plugin_auth.py  _preset_catalog.py  _redis_lock.py  _responses.py  _session.py  _subscription_models.py  _test_guard.py  _tmp_probe.py  _tmp_run.py  account.py  admin_client.py  api.py  audit.py  boot.py  branding.py  demo.py  dev.py  diagnostics.py  exceptions.py  hooks.py  install.py  installed_apps_sync.py  llm_key_probe.py  mcp.py  onboarding.py  openclaw_bootstrap.py  openclaw_config.py  openclaw_push.py  openclaw_ws.py  patches.txt  permissions.py  pwa.py  release_notice.py  selfhost.py  telemetry.py
jarvis/agents/: registry.json
jarvis/chat/: _record_summary.py  actions_api.py  admission.py  agent_activity.py  agent_catalog.py  agent_installability.py  agent_notes.py  agent_permissions.py  agent_runs.py  agent_scheduler.py  agent_scope.py  agents_api.py  api.py  app_learning_api.py  approvals_api.py  canvas.py  chat_asks.py  chat_permissions.py  confirm_card.py  coverage_reasons.py  custom_skills.py  custom_skills_api.py  customizations_clause.py  dashboard_permissions.py  dashboards_api.py  dev_seed.py  device.py  dispatch.py  docmeta_api.py  entities.py  events.py  file_permissions.py  filebox.py  finalize.py  generated_media.py  greeting.py  knowledge_language.py  latency.py  learned_api.py  learned_skills_api.py  (+39 more)
jarvis/desktop_icon/: account.json  chat.json  jarvis.json  onboarding.json
jarvis/docs/: README.md  architecture.md  configuration.md  development.md  getting-started.md  local-dev.md  operations.md  tools-api.md
jarvis/jarvis/: pool_serialize.py
jarvis/learning/: app_analysis.py  bootstrap.py  chat_mining.py  compat.py  compiler.py  engine.py  executor.py  fdr.py  lifecycle.py  orchestrator.py  polish.py  questions.py  readonly_db.py  registry.py  roles.py  sanitizer.py  skill_drafts.py  snapshots.py  stats.py  voice_facts.py  wiki_lint.py
jarvis/mobile/: auth.py
jarvis/oauth/: api.py  cron.py  device_flow.py  email_templates.py  gemini_cli_secret.py  providers.py  refresh.py
jarvis/openclaw_templates/: openclaw.json.j2
jarvis/openclaw_workspace_seeds/: AGENTS.md  IDENTITY.md  SOUL.md  USER.md
jarvis/patches/: v1_0_rename_openclaw_to_agent.py  v1_10_backfill_llm_pool_synced_at.py  v1_11_encrypt_plaintext_settings_passwords.py  v1_11_greeting_cadence.py  v1_12_skill_scope_ladder.py  v1_13_encrypt_plaintext_settings_passwords.py  v1_14_merge_user_preference_into_settings.py  v1_14_remove_desk_workspaces.py  v1_15_drop_user_preference_doctype.py  v1_15_merge_user_preference_into_settings.py  v1_15_unarchive_auto_expired_conversations.py  v1_16_drop_user_preference_doctype.py  v1_16_merge_user_preference_into_settings.py  v1_16_retire_knowledge_wiki_user.py  v1_17_drop_user_preference_doctype.py  v1_1_titlecase_conversation_status.py  v1_2_clear_legacy_admin_token.py  v1_3_backfill_llm_auth_mode.py  v1_4_drop_llm_oauth_fields.py  v1_5_drop_dev_only_operator_fields.py  v1_6_normalize_llm_preset_value.py  v1_6_rename_jarvis_approval.py  v1_7_chat_message_page_index.py  v1_8_backfill_wiki_scope.py  v1_9_backfill_wiki_manual_links.py  v1_seed_llm_models.py  (+9 more)
jarvis/support/: api.py  (+1 more)
pwa/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: gen_bundled_catalog.py
wiki-graph-core/: index.js  package-lock.json  package.json  verify_pure.mjs
(+757 files in other folders)
