[project]
name = "jarvis"
authors = [
    { name = "Aerele", email = "navin@aerele.in"}
]
description = "AI superpowers for Frappe/ERPNext, powered by openclaw"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "websocket-client>=1.6,<2",
    # PDF -> image rasterization for native LLM vision (jarvis/chat/vision.py).
    # Permissive license only: pypdfium2 (Apache/BSD), NOT PyMuPDF (AGPL).
    "pypdfium2>=4",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "jarvis"

# Frappe Cloud / bench compatibility gate: which framework majors this app
# supports. erpnext/hrms are deliberately absent - jarvis runs on frappe-only
# benches (app-gated skills/tools handle the rest).
[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
    "UP030", # Use implicit references for positional format fields (translations)
    "UP031", # Use format specifiers instead of percent format
    "UP032", # Use f-string instead of `format` call (translations)
    "UP037", # quoted annotations
    "UP040", # Use type aliases instead of type annotations

    # --- Deliberate, not debt -------------------------------------------------
    # This product writes typographic characters into user-facing strings on
    # purpose: "->" arrows on confirmation cards, "·" separators, curly quotes in
    # persona copy. Ruff cannot tell those from a homoglyph attack, and we are
    # not going to ASCII-ify the UI to satisfy it.
    "RUF001", # ambiguous unicode character in a string
    "RUF002", # ambiguous unicode character in a docstring
    "RUF003", # ambiguous unicode character in a comment

    # --- Pre-existing debt, enabled 2026-07-17 --------------------------------
    # The linter was configured but never enforced (the pre-commit hook was
    # never installed), so 96 violations accumulated. 22 were auto-fixed when
    # the hook went in; these 11 rules cover the 75 that need a human decision -
    # several are behavioural (B905 changes what zip() does on unequal lengths;
    # F841 can be hiding a real bug). Ignored HERE so the rule stays enforced
    # for every other rule and all new code, rather than left un-run.
    # Burn these down file-by-file; delete each line as it hits zero.
    # Cleared 2026-07-20: B905 (4), F841 (11), RUF007 (2) - the behavioural ones.
    "B007",   # loop control variable not used in the body            (4)
    "RUF005", # prefer iterable unpacking over concatenation          (3)
    "RUF012", # mutable class default needs ClassVar - may be a bug   (8)
    "RUF013", # implicit Optional in a type annotation                (1)
    "RUF015", # unnecessary allocation to grab the first element      (5)
    "RUF046", # unnecessary int() cast                                (2)
    "RUF059", # unused variable in an unpacking assignment            (8)
    "UP028",  # yield in a for loop, use yield from                   (2)
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
