[project]
name = "jarvis"
authors = [{ name = "Aerele", email = "navin@aerele.in" }]
description = "AI superpowers for Frappe/ERPNext, powered by openclaw"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "jarvis"
